<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#372323"
    android:gravity="center|top"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar


            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#8a0101"
            android:elevation="0dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
            app:contentInsetStart="0dp">


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:contentDescription='@string/app_name'

            android:scaleType="fitCenter"
            app:srcCompat="@drawable/piston_icon" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_racing"
            android:elevation="8dp"
            android:fontFamily="sans-serif-black"
            android:padding="20dp"
            android:text="@string/play"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10.dp" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_racing"
            android:elevation="8dp"
            android:fontFamily="sans-serif-black"
            android:padding="16dp"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
